tests/fixtures/hub-module/example/1/bad/src/delta.ts
export const deltaValue = "delta"

export const readDelta = (): string => deltaValue
